2005-07-16  John (J5) Palmieri  <johnp@redhat.com>

	* python/Makefile.am: dbus_binding.pxd.in should be included 
	in EXTRA_DIST not dbus_binding.pxd

	* NEWS: Update to 0.35.1
	
2005-07-15  John (J5) Palmieri  <johnp@redhat.com>

	* NEWS: Update to 0.35

2005-07-15  John (J5) Palmieri  <johnp@redhat.com>

	* glib/Makefile.am: Add make-dbus-glib-error-switch.sh to EXTRA_DIST
	so distcheck doesn't fail

	* glib/examples/Makefile.am: Add example-service.xml and 
	example-signal-emitter.xml to EXTRA_DIST so distcheck doesn't fail

	* glib/examples/statemachine/Makefile.am: Add statemachine.xml and
	statemachine-server.xml to EXTRA_DIST so distcheck doesn't fail

	* python/Makefile.am: Preprend $(srcdir)/ to source files so the
	compiler looks in the right places during distcheck

2005-07-15  John (J5) Palmieri  <johnp@redhat.com>

	* glib/example/Makefile.am: Fix a typo which cause make distcheck
	to fail

2005-07-15  John (J5) Palmieri  <johnp@redhat.com>

	* python/examples/example-service.py,
	python/examples/example-signal-emitter.py: Fixed up examples
	for API changes

2005-07-15  John (J5) Palmieri  <johnp@redhat.com>

	* python/__init__.py: Upped to version (0,42,0) because of
	the API change

2005-07-15  John (J5) Palmieri  <johnp@redhat.com>

	* ChangeLog: fix date in last entry

	* configure.in, bus/system.conf.in: add the ability to configure 
	the system bus user at compiletime with the --with-dbus-user flag
	(patch from Kristof Vansant)

2005-07-15  John (J5) Palmieri  <johnp@redhat.com>

	* bus/dispatch.c, test/test-service.c: Add testcase
	for sending messages to oneself (TODO item).

	* python/service.py (class Object): Swap ordering of bus_name 
	and object_path parameters to better support inheritance.

	* doc/dbus-tutorial.xml: change Python docs to reflect change
	in parameter ordering and fix the inheritance section.

	* doc/TODO: remove sending message to oneself TODO item

2005-07-15  Ross Burton  <ross@openedhand.com>

	* glib/dbus-gproxy.c: