@@ -10,12 +10,12 @@ dbusbindings_LTLIBRARIES = dbus_bindings.la dbus_glib_bindings.la
 
 dbus_bindings_la_LDFLAGS = -module -avoid-version -fPIC -export-symbols-regex initdbus_bindings
 dbus_bindings_la_LIBADD = $(top_builddir)/dbus/libdbus-1.la
-nodist_dbus_bindings_la_SOURCES = $(srcdir)/dbus_bindings.c
+nodist_dbus_bindings_la_SOURCES = dbus_bindings.c
 
 dbus_glib_bindings_la_LDFLAGS = -module -avoid-version -fPIC -export-symbols-regex initdbus_glib_bindings 
 dbus_glib_bindings_la_LIBADD = $(top_builddir)/dbus/libdbus-1.la $(top_builddir)/glib/libdbus-glib-1.la
 dbus_glib_bindings_la_CFLAGS = $(DBUS_GLIB_CFLAGS) $(DBUS_GLIB_TOOL_CFLAGS)
-nodist_dbus_glib_bindings_la_SOURCES = $(srcdir)/dbus_glib_bindings.c
+nodist_dbus_glib_bindings_la_SOURCES = dbus_glib_bindings.c
 
 
 EXTRA_DIST = 			\
@@ -32,11 +32,14 @@ CLEANFILES =			\
 
 
 dbus_bindings.pxd: $(srcdir)/dbus_bindings.pxd.in $(srcdir)/extract.py
-	-$(PYTHON) $(srcdir)/extract.py $(srcdir)/dbus_bindings.pxd.in -I$(top_builddir)  > $@.tmp && mv $@.tmp $@
+	-cp $(srcdir)/dbus_h_wrapper.h ./
+	-$(PYTHON) $(srcdir)/extract.py $(srcdir)/dbus_bindings.pxd.in -I$(srcdir)/$(top_builddir)  > $@.tmp && mv $@.tmp $@
 
-dbus_bindings.c: $(srcdir)/dbus_bindings.pyx $(srcdir)/dbus_bindings.pxd 
-	-pyrexc $(srcdir)/dbus_bindings.pyx
+dbus_bindings.c: $(srcdir)/dbus_bindings.pyx dbus_bindings.pxd 
+	-cp $(srcdir)/dbus_bindings.pyx ./ 
+	-pyrexc dbus_bindings.pyx
 
-dbus_glib_bindings.c: $(srcdir)/dbus_glib_bindings.pyx $(srcdir)/dbus_bindings.pxd 
-	-pyrexc $(srcdir)/dbus_glib_bindings.pyx 
+dbus_glib_bindings.c: $(srcdir)/dbus_glib_bindings.pyx dbus_bindings.pxd 
+	-cp $(srcdir)/dbus_glib_bindings.pyx ./ 
+	-pyrexc dbus_glib_bindings.pyx 
 
